# ddb_misc_headerbar_GTK3

./: .gitignore  Makefile  Makefile.am  README.md  appmenu.c  appmenu.h  autogen.sh  configure.ac  headerbar.ui  headerbarui.c  meson.build
distro/arch/: PKGBUILD
src/: Makefile.am  custom.css  ddbheaderbar.c  ddbheaderbar.h  headerbar.ui  headerbarui.c  headerbarui.gresource.xml  headerbarui.h  menu.css  menu.ui  meson.build  popovermenu.ui
